--- a/NetgearG/NetgearG.csproj
+++ b/NetgearG/NetgearG.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="NetgearGenie.apk" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
